@startuml Trade System Class Diagram

title Trade System - Updated Class Diagram

package com.tradestore.domain.valueobject {
    class TradeId {
        - UUID value
        --
        + TradeId(UUID value)
        + generate(): TradeId
        + from(String uuidString): TradeId
        + getValue(): UUID
        + equals(Object o): boolean
        + hashCode(): int
        + toString(): String
    }
    
    class CounterPartyId {
        - String value
        --
        + CounterPartyId(String value)
        + from(String value): CounterPartyId
        + getValue(): String
        + equals(Object o): boolean
        + hashCode(): int
        + toString(): String
    }
}

package com.tradestore.entity {
    class Trade {
        - TradeId tradeId
        - Integer version
        - Long jpaVersion
        - CounterPartyId counterPartyId
        - String bookId
        - LocalDate maturityDate
        - LocalDate createdDate
        - boolean expired
        - LocalDate timestamp
        - LocalDate lastUpdated
        --
        + getters()
        + setters()
        + validateMaturityDatePublic(): void
        + toString()
    }
    
    class AuditMessage {
        - String id
        - String messageId
        - String topic
        - Integer partition
        - Long offset
        - String messageContent
        - LocalDateTime receivedAt
        - LocalDateTime processedAt
        - String status
        - String errorMessage
        --
        + getters()
        + setters()
        + toString()
    }
}

package com.tradestore.dto {
    class TradeMessage {
        - UUID tradeId
        - Integer version
        - String counterPartyId
        - String bookId
        - LocalDate maturityDate
        - LocalDate createdDate
        - String expired
        --
        + getters()
        + setters()
        + toString()
    }
}

package com.tradestore.service {
    class TradeService {
        - TradeRepository tradeRepository
        - Counter rejectedTradesCounter
        - Counter processedTradesCounter
        - Counter expiredTradesCounter
        --
        + processTrade(Trade trade)
        + markExpiredTrades()
        + getTrade(tradeId)
        + getAllTrades()
        + deleteTrade(tradeId)
    }
    
    class TradeServiceOptimized {
        - TradeRepository tradeRepository
        - static final int BATCH_SIZE
        - static final Executor asyncExecutor
        --
        + processTrade(Trade trade)
        + processTradesInBulk(List<Trade> trades)
        + getTradesPaginated(page, size, sortBy, sortDir)
        + getTradesByCounterParty(counterPartyId, page, size)
        + markExpiredTradesOptimized()
        + markExpiredTradesAsync()
        + getTradeCount()
        + getTradeCountByExpiry(expired)
    }
    
    class KafkaTradeConsumer {
        - TradeService tradeService
        - AuditMessageRepository auditMessageRepository
        - ObjectMapper objectMapper
        --
        + consumeTradeMessage(message, headers, acknowledgment)
        - createAuditMessage(message, topic, partition, offset)
        - convertToTrade(TradeMessage tradeMessage)
    }
}

package com.tradestore.repository {
    interface TradeRepository {
        + <T> findById(ID id)
        + <S> save(S entity)
        + List<Trade> findAll()
        + List<Trade> findTradesToExpireBatch(currentDate, pageable)
        + Page<Trade> findByCounterPartyId(counterPartyId, pageable)
        + long countByExpired(expired)
    }
    
    interface AuditMessageRepository {
        + <S> save(S entity)
        + List<AuditMessage> findAll()
        + Optional<AuditMessage> findByMessageId(String messageId)
    }
}

package org.springframework.data {
    interface JpaRepository<Entity, ID> {
        + <T> findById(ID id)
        + <S> save(S entity)
        + deleteById(ID id)
        + findAll()
    }
    
    interface MongoRepository<Entity, ID> {
        + <T> findById(ID id)
        + <S> save(S entity)
        + deleteById(ID id)
        + findAll()
    }
}

' Relationships
Trade --> TradeId : "has"
Trade --> CounterPartyId : "has"
TradeRepository --|> JpaRepository : extends
TradeRepository --> Trade : manages

AuditMessageRepository --|> MongoRepository : extends
AuditMessageRepository --> AuditMessage : manages

TradeService --> TradeRepository : uses
TradeService --> Trade : processes

TradeServiceOptimized --> TradeRepository : uses
TradeServiceOptimized --> Trade : processes

KafkaTradeConsumer --> TradeService : delegates
KafkaTradeConsumer --> AuditMessageRepository : saves
KafkaTradeConsumer --> TradeMessage : consumes
KafkaTradeConsumer --> Trade : converts

' Entity annotations
note top of Trade
  @Entity
  @Table(name = "trades", indexes = {
    @Index(name = "idx_trade_id", columnList = "trade_id"),
    @Index(name = "idx_maturity_date", columnList = "maturity_date"),
    @Index(name = "idx_expired", columnList = "expired")
  })
  @EntityListeners(AuditingEntityListener.class)
end note

note top of TradeId
  @Embeddable
  @Column(name = "trade_id", columnDefinition = "BINARY(16)")
end note

note top of CounterPartyId
  @Embeddable
  @Column(name = "counter_party_id", nullable = false, length = 50)
end note

note top of AuditMessage
  @Document(collection = "audit_messages")
end note

' Service annotations
note top of TradeService
  @Service
  @Transactional
  @Scheduled(cron = "0 0 0 * * *")
end note

note top of TradeServiceOptimized
  @Service
  @Transactional
  @Validated
  @Scheduled(cron = "0 0 0 * * *")
  @Scheduled(cron = "0 30 0 * * *")
end note

note top of KafkaTradeConsumer
  @Service
  @KafkaListener(topics = "tradestore")
end note

' Repository annotations
note top of TradeRepository
  @Repository
end note

note top of AuditMessageRepository
  @Repository
end note

@enduml
